Controls Activity Demo

--- a/MAUITest/MAUITest.csproj
+++ b/MAUITest/MAUITest.csproj
@@ -53,6 +53,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="ActivityControlsDemo.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="AnotherPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
