Rotation Slider Page

--- a/MAUITest/MAUITest.csproj
+++ b/MAUITest/MAUITest.csproj
@@ -62,6 +62,9 @@
 	  <MauiXaml Update="BindingDemoTest\BindingDemo.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="BindingDemoTest\SliderPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="CollectionsControlsDemo.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
